@@ -456,7 +456,7 @@ a.csv_download:hover		{background-color:rgba(255,255,255, 0.3); color:#FFF;}
 .activities_spend span		{padding-bottom:3px;}
 .activities_barchart_wrap	{min-width:100px; max-width:100px; position:absolute; right:0;}
 .activities_percent_max		{width:100px; height:10px; background-color:#000000; border:1px solid #333642; border-radius:8px 0 0 8px;}
-.activities_percent			{height:10px; background-color:#33A4FC; border-radius:8px 0 0 8px;}
+.activities_percent			{height:8px; background-color:#33A4FC; border-radius:8px 0 0 8px;}
 
 
 /*	For url #view=sectors & all #view=sector_*
