@@ -2,6 +2,8 @@ Development Portal (2025-08-27 shi)
 ==============================
 Fix dquery css
 Update footer
+Fix header css
+Fix stats css
 
 
 Development Portal (2025-07-31 shi)
